# SmallCat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
Samples/: CMakeLists.txt
Samples/Common/: CMakeLists.txt
Samples/Common/Src/: Application.h  MainApp.cpp
Samples/Hello/: CMakeLists.txt
Samples/Hello/Src/: main.cpp
Src/: CMakeLists.txt  main.cpp
Src/Contanst/: AppConst.h
Src/Enums/: Suspend.h
Src/Events/: CharEvent.h  DropFileEvent.h  Event.h  EventQueue.h  KeyEvent.h  MouseEvent.h  SizeEvent.h  SuspendEvent.h  WindowEvent.h
Src/Imgui/: DearImgui.cpp  DearImgui.h
Src/Input/: Input.h  InputBinding.h  InputMouse.h  InputSystem.cpp  InputSystem.h  Inputkeyboard.h  Key.h  MouseButton.h  MouseState.h
Src/Platform/: MainApp.h  MainWindowsApp.cpp  TestMainAPP.cpp  TestMainWindowsApp.cpp  WindowHandle.h  WindowState.h
Src/Samples/: Application.h
Src/Samples/Hello/: HelloSample.cpp  HelloSample.h  main.cpp
Src/Utils/: BgfxUtils.cpp  BgfxUtils.h
animation/: animated_joint.h  animation_clip.cpp  animation_clip.h  animationclip.h  interpolation.cpp  interpolation.h  joint_animation_track.h  joint_track.cpp  joint_track.h  keyframe.h  pose.cpp  pose.h  skeleton.cpp  skeleton.h  track.cpp  track.h
assets/: test.gltf
cmake/: macros.cmake
examples/: application.cpp  application.h
examples/animationclip/: animation_clip_sample.cpp  animation_clip_sample.h
examples/debugdraw/: debug_draw_sample.cpp  debug_draw_sample.h
examples/helloworld/: helloworld.cpp  helloworld.h
examples/pose/: pose_sample.cpp  pose_sample.h
gltf/: gltf_loader.cpp  gltf_loader.h
graphic/: debug_draw.cpp  debug_draw.h
math/: Vector3.cpp  Vector3.h  constants.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  vector2.h  vector4.h
test/: CMakeLists.txt  main.cpp
